css/component.css
@font-face {
	font-family: 'typicons';
	src:url('../fonts/typicons/typicons.eot');
	src:url('../fonts/typicons/typicons.eot?#iefix') format('embedded-opentype'),
		url('../fonts/typicons/typicons.ttf') format('truetype'),
		url('../fonts/typicons/typicons.woff') format('woff'),
		url('../fonts/typicons/typicons.svg#typicons') format('svg');
	font-weight: normal;
	font-style: normal;
}

/*@font-face {
    font-family: 'source_sans_proregular';
    src: url('../fonts/sourcesanspro-regular-webfont.eot');
    src: url('../fonts/sourcesanspro-regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/sourcesanspro-regular-webfont.woff') format('woff'),
         url('../fonts/sourcesanspro-regular-webfont.ttf') format('truetype'),
         url('../fonts/sourcesanspro-regular-webfont.svg#source_sans_proregular') format('svg');
    font-weight: normal;
    font-style: normal;

}*/

html, body, .perspective {
	width: 100%;
	height: 100%;
}
body {
	background:#fff;
}
.perspective {
	background: #aaa;
	position: relative;
}

.container {
	background: #fff;
	min-height: 100%;
	position: relative;
	outline: 1px solid rgba(0,0,0,0);
	z-index: 10;
	-webkit-transform: translateZ(0) translateX(0) rotateY(0deg); /* reset transforms (Chrome bug) */
	transform: translateZ(0) translateX(0) rotateY(0deg);
}

.container::after {
	content: '';
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 0px;
	opacity: 0;
	background: rgba(0,0,0,0.2);
	/* the transition delay of the height needs to be synced with the container transition time */
	-webkit-transition: opacity 0.4s, height 0s 0.4s;
	transition: opacity 0.4s, height 0s 0.4s;
}

.wrapper {
	position: relative;
}

.component {
	margin: 0 auto;
	width: 60%;
	text-align: justify;
	font-size: 1.5em;
}

/* Modal view */
.perspective.modalview {
	position: fixed;
	-webkit-perspective: 1500px;
	perspective: 1500px;
}

.modalview .container {
	position: absolute;
	overflow: hidden;
	width: 100%;
	height: 100%;
	/*cursor: pointer;*/
	-webkit-backface-visibility: hidden;
	backface-visibility: hidden;
}

.modalview .wrapper {
	-webkit-transform: translateZ(-1px); /* solves a rendering bug in Chrome on Windows */
}

.animate .container::after {
	opacity: 1;
	height: 101%;
	-webkit-transition: opacity 0.3s;
	transition: opacity 0.3s;
}

/* Outer Nav */
.outer-nav {
	position: absolute;
	height: auto;
	font-size: 2em;
}

.outer-nav.vertical {
	top: 50%;
	-webkit-transform: translateY(-50%);
	transform: translateY(-50%);
	-webkit-transform-style: preserve-3d;
	transform-style: preserve-3d;
}

.outer-nav.horizontal {
	left: 50%;
	width: 75%;
	max-width: 1000px;
	text-align: center;
	-webkit-transform: translateX(-50%);
	transform: translateX(-50%);
}

/*.outer-nav.left {
	left: 25%;
}*/

.outer-nav.right {
	right: 8%;
}

/*.outer-nav.top {
	top: 25%;
}

.outer-nav.bottom {
	bottom: 25%;
}*/

.outer-nav a {
	display: inline-block;
	white-space: nowrap;
	font-weight: 300;
	margin: 0 0 30px 0;
	color: #fff;
	-webkit-transition: color 0.3s;
	transition: color 0.3s;
	-webkit-transform-style: preserve-3d;
	transform-style: preserve-3d;
}

.outer-nav a:hover {
	color: #ffdccd;
}

.outer-nav.vertical a {
	display: block;
}

.outer-nav.horizontal a {
	margin: 15px 20px;
}

.outer-nav a::before {
	display: inline-block;
	font-family: 'typicons';
	speak: none;
	font-style: normal;
	font-weight: normal;
	font-variant: normal;
	text-transform: none;
	line-height: 1;
	margin-right: 10px;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	-webkit-backface-visibility: hidden;
	backface-visibility: hidden;
}

/*.icon-news::before { content: "\e600" }
.icon-home::before { content: "\e601" }
.icon-image::before { content: "\e602" }
.icon-upload::before { content: "\e603" }
.icon-star::before { content: "\e604" }
.icon-mail::before { content: "\e605" }
.icon-lock::before { content: "\e606" }
.icon-chart-pie::before { content: "\e607" }*/

/* Individual Effects */

/* Effect airbnb */
/*.effect-airbnb {
	background: #b8b6b4;
}

.effect-airbnb .container {
	-webkit-transition: -webkit-transform 0.4s;
	transition: transform 0.4s;
	-webkit-transform-origin: 50% 50%;
	transform-origin: 50% 50%;
}

.effect-airbnb.animate .container {
	-webkit-transform: translateZ(-1500px) translateX(100%) rotateY(-45deg);
	transform: translateZ(-1500px) translateX(100%) rotateY(-45deg);
}

.no-csstransforms3d .effect-airbnb.animate .container {
	left: 75%;
}

.effect-airbnb .outer-nav a {
	opacity: 0;
	-webkit-transform: translateX(-150px);
	transform: translateX(-150px);
	-webkit-transition: -webkit-transform 0.4s, opacity 0.4s;
	transition: transform 0.4s, opacity 0.4s;
}

.effect-airbnb.animate .outer-nav a {
	opacity: 1;
	-webkit-transform: translateX(0);
	transform: translateX(0);
}

.effect-airbnb.animate .outer-nav a:nth-child(2) {
	-webkit-transition-delay: 0.04s;
	transition-delay: 0.04s;
}

.effect-airbnb.animate .outer-nav a:nth-child(3) {
	-webkit-transition-delay: 0.08s;
	transition-delay: 0.08s;
}

.effect-airbnb.animate .outer-nav a:nth-child(4) {
	-webkit-transition-delay: 0.12s;
	transition-delay: 0.12s;
}

.effect-airbnb.animate .outer-nav a:nth-child(5) {
	-webkit-transition-delay: 0.16s;
	transition-delay: 0.16s;
}

.effect-airbnb.animate .outer-nav a:nth-child(6) {
	-webkit-transition-delay: 0.2s;
	transition-delay: 0.2s;
}

.effect-airbnb.animate .outer-nav a:nth-child(7) {
	-webkit-transition-delay: 0.24s;
	transition-delay: 0.24s;
}*/

/* Effect Move Left */
/*.effect-moveleft {
	background: #f4f3f1;
}

.effect-moveleft .container {
	-webkit-transition: -webkit-transform 0.4s;
	transition: transform 0.4s;
	-webkit-transform-origin: 50% 50%;
	transform-origin: 50% 50%;
}

.effect-moveleft .container::after {
	background: rgba(255,255,255,0.6);
}

.effect-moveleft.animate .container {
	-webkit-transform: translateX(-50%) rotateY(45deg) translateZ(-50px);
	transform: translateX(-50%) rotateY(45deg) translateZ(-50px);
}
/* ... */

